--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <h1>Malla Curricular - Contaduría Pública</h1>
+  <h2>Universidad del Valle</h2>
 
   <div class="semestre" id="semestre2">
     <h2>Semestre 2</h2>
