--- a/index.html
+++ b/index.html
@@ -1,24 +1,14 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Malla Curricular Interactiva</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Malla Interactiva Contaduría</title>
+  <link rel="stylesheet" href="estilos.css" />
 </head>
 <body>
-  <h1>Malla Curricular - Contaduría Pública</h1>
-
-  <div class="semestre" id="semestre2">
-    <h2>Semestre 2</h2>
-    <div class="materia" onclick="toggleAprobado(this)">
-      <p>Contabilidad II</p>
-      <p>Tipo: Básica</p>
-      <p>Créditos: 3</p>
-      <input type="text" placeholder="Nota" class="nota">
-    </div>
-  </div>
-
+  <h1>Malla Interactiva - Contaduría Pública</h1>
+  <div id="malla" class="malla"></div>
   <script src="script.js"></script>
 </body>
 </html>
